--- a/src/views/templates/courseCreate/courseVideos.ejs
+++ b/src/views/templates/courseCreate/courseVideos.ejs
@@ -29,6 +29,7 @@
                     <input type="text" class="videoId" name="videoId[]" required><br><br>
                     <label for="isPreview">Is Preview:</label><br>
                     <input type="checkbox" class="isPreview" name="isPreview[]"><br><br>
+                    <input type="hidden" name="moduleId" value="<%= module.id %>">
                 </div>
                 <hr>
             <% }); %>
