--- a/src/views/templates/courseCreate/courseVideos.ejs
+++ b/src/views/templates/courseCreate/courseVideos.ejs
@@ -27,7 +27,7 @@
                     </div>
                     <label for="videoId">Video ID: (From Youtube)</label><br>
                     <input type="text" class="videoId" name="videoId[]" required><br><br>
-                    <input type="hidden" name="moduleId" value="<%= module.id %>">
+                    <input type="hidden" name="moduleId[]" value="<%= module.id %>">
                 </div>
                 <hr>
             <% }); %>
