--- a/src/views/templates/courseDetail.ejs
+++ b/src/views/templates/courseDetail.ejs
@@ -14,71 +14,74 @@
 <body>
     <%- include ('navbar') -%>
         <%- include ('alert') -%>
-            <button>
-                <a href="/api/courses">Go back to All Courses</a>
-            </button>
+            <div>
+                <button>
+                    <a href="/api/courses">Go back to All Courses</a>
+                </button>
+                <button>
+                    <p><a href="/api/course/<%= course.id %>/update">Edit</a></p>
+                </button>
+                <button>
+                    <p><a href="#">Delete</a></p>
+                </button>
+            </div>
+
+
 
             <div class="course-container">
+                <!-- PLAYER -->
                 <!-- ========================================================= -->
-                <div class="first-module">
-                    <div class='course-detail'>
-                        <div>
-                            <button>
-                                <p><a href="/api/course/<%= course.id %>/update">Edit</a></p>
-                            </button>
-                            <button>
-                                <p><a href="#">Delete</a></p>
-                            </button>
-                        </div>
-                        <!--here we display enrolledcourses from the user-->
-                        <% if (course) { %>
-                            <img src="<%= course.thumbnail %>" alt="<%= course.title %> image">
+                <% if (modules.length> 0) { %>
+                    <div class="first-module">
+                        <div class='course-detail'>
                             <h1>
-                                <%= course.title %>
+                                <%= modules[0].title %>
                             </h1>
-                            <div class="markdown-content">
-                                <h3>
-                                    <%= course.description %>
-                                </h3>
+                            <!-- Video player container for the first module -->
+                            <div class="plyr__video-embed" id="player<%= modules[0].id %>">
+                                <!-- Embedded video link -->
+                                <iframe src="<%= modules[0].video_link %>" allowfullscreen allowtransparency
+                                    allow="autoplay"></iframe>
                             </div>
-                            <!--  -->
-                            <p>
-                                <%= course.instructor %>
-                                    </hp>
-                                    <!-- Display other details of the course -->
-                                    <% } else { %>
-                                        <p>No course details available.</p>
-                                        <% } %>
+                        </div>
                     </div>
-                </div>
+                    <% } %>
+                        <!-- ========================================================= -->
+                        <!-- Include Plyr.js CSS -->
+                        <link rel="stylesheet" href="https://cdn.plyr.io/3.6.4/plyr.css" />
+                        <!-- ========================================================= -->
+                        <!-- MODULES LIST --------------->
+                        <div class="modules-list">
+                            <!-- Render modules for the current course -->
+                            <h2>Modules</h2>
+                            <ul>
+                                <% modules.slice(1).forEach((module)=> { %>
+                                    <li>
+                                        <h3>
+                                            <%= module.title %>
+                                        </h3>
+                                        <!-- Video player container -->
+                                        <div class="plyr__video-embed" id="player<%= module.id %>">
+                                            <!-- Embedded video link -->
+                                            <iframe src="<%= module.video_link %>" allowfullscreen allowtransparency
+                                                allow="autoplay"></iframe>
+                                        </div>
+                                    </li>
+                                    <% }) %>
+                            </ul>
+                        </div>
+            </div>
 
-                <!-- Include Plyr.js CSS -->
-                <link rel="stylesheet" href="https://cdn.plyr.io/3.6.4/plyr.css" />
-
-                <!-- MODULES LIST --------------->
-                <div class="modules-list">
-                    <!-- Render modules for the current course -->
-                    <h2>Modules</h2>
-                    <ul>
-                        <% modules.forEach((module)=> { %>
-                            <li>
-                                <h3>
-                                    <%= module.title %>
-                                </h3>
-                                <!-- <p>
-                                    <%= module.description %>
-                                </p> -->
-                                <!-- Video player container -->
-                                <div class="plyr__video-embed" id="player<%= module.id %>">
-                                    <!-- Embedded video link -->
-                                    <iframe src="<%= module.video_link %>" allowfullscreen allowtransparency
-                                        allow="autoplay"></iframe>
-                                </div>
-                            </li>
-                            <% }) %>
-                    </ul>
-                </div>
-
+            <div class="course-detail">
+                <!-- COURSE DETAIL -->
+                <!-- ========================================================= -->
+                <h1>
+                    <%= course.title %>
+                </h1>
+                <h3>
+                    <%= course.description %>
+                </h3>
+                <br>
             </div>
 
             <!--SCRIPTS-------------------------------------------------------------------------------------------------------------------->
